# schwab-csv-to-json

./: .gitignore  260114output  260115output  CLAUDE.md  PRD.md  README.md  Tasks.md  __version__.py  batch.py  change_acct.sh  diagnose.py  main.py  patterns.json  pyproject.toml  t  tui.py
examples/: 2025-09-22-TradeActivity.csv  2025-09-23-TradeActivity.csv  2025-09-24-TradeActivity.csv  2025-09-25-TradeActivity.csv  2025-09-26-TradeActivity.csv  2025-10-03-TradeActivity.csv  2025-10-06-TradeActivity.csv  2025-10-07-TradeActivity.csv  2025-10-08-TradeActivity.csv  2025-10-09-TradeActivity.csv  2025-10-10-TradeActivity.csv  2025-10-13-TradeActivity.csv  2025-10-14-TradeActivity.csv  2025-10-15-TradeActivity.csv  2025-10-16-TradeActivity.csv  2025-10-17-TradeActivity.csv  2025-10-20-TradeActivity.csv  2025-10-21-TradeActivity.csv  2025-10-22-TradeActivity.csv  2025-10-23-TradeActivity.csv  2025-10-24-TradeActivity.csv  2025-10-27-TradeActivity.csv  2025-10-28-TradeActivity.csv  2025-10-29-TradeActivity.csv  2025-10-30-TradeActivity.csv  2025-10-31-TradeActivity.csv  2025-11-03-TradeActivity.csv  2025-11-04-TradeActivity.csv  2025-11-05-TradeActivity.csv  2025-11-06-TradeActivity.csv  2025-11-07-TradeActivity.csv  2025-11-12-TradeActivity 085.csv  2025-11-12-TradeActivity 865.csv  2025-11-13-TradeActivity con.csv  2025-11-13-TradeActivity ind.csv  2025-11-14-TradeActivity ind.csv  2025-11-17-TradeActivity con.csv  2025-11-18-TradeActivity con.csv  2025-12-03-TradeActivity 1600 ind.csv  2025-12-03-TradeActivity con.csv  (+4 more)
files/: 2026-01-06-TradeActivity-con.csv  (+8 more)
(+7 files in other folders)
